addted package info and pom.xml updates